--- a/spatial/index.html
+++ b/spatial/index.html
@@ -194,7 +194,7 @@
   
 
 						<ul class="actions">
-							<form action="https://formsubmit.co/may.pescante@gmail.com" method="POST" id="contact-form">
+							<form action="https://formsubmit.co/jmkjr.mgmt@gmail.com" method="POST" id="contact-form">
 
 <p><label>First Name:</label> <input name="name" type="text" /></p>
 <p><label>Email Address:</label> <input style="cursor: pointer;" name="email" type="text" /></p>
