--- a/spatial/index.html
+++ b/spatial/index.html
@@ -200,7 +200,7 @@
 						<!-- Disable Captcha -->
 								<input type="hidden" name="_captcha" value="false">
 								
-								<input type="hidden" name="_next" value="success.html">
+								<input type="hidden" name="_next" value="/success.html">
 <p><label>First Name:</label> <input name="Name" type="text" /></p>
 <p><label>Email Address:</label> <input style="cursor: pointer;" name="Email" type="email" /></p>
 <p><label>Message:</label>  <textarea name="Message"></textarea> </p>
