--- a/spatial/index.html
+++ b/spatial/index.html
@@ -9,6 +9,8 @@
 	<head>
 		<title>jmk jr.</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
+
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
