--- a/spatial/index.html
+++ b/spatial/index.html
@@ -9,7 +9,7 @@
 	<head>
 		<title>jmk jr.</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
 
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
