--- a/spatial/success.html
+++ b/spatial/success.html
@@ -43,8 +43,8 @@
 	
 		<section id="banner">
 		
-				<h2>Success!</h2>
-				<p>Thanks for your message! -jmk jr.</p>
+				<h2 style="text-shadow: 4px 4px 4px #aaa;">Success!</h2>
+				<p style="text-shadow: 4px 4px 4px #aaa;">Thanks for your message! -jmk jr.</p>
 				<br />
 				
 
