--- a/spatial/index.html
+++ b/spatial/index.html
@@ -28,7 +28,7 @@
 		<script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
 h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
-})(window,document.documentElement,'async-hide','dataLayer',4000,
+})(window,document.documentElement,'async-hide','dataLayer',500,
 {'CONTAINER_ID':true});
 		</script>
 	</head>
@@ -61,7 +61,7 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 
 			</section>
 
-<a name="Listen"></a>
+<!--<a name="Listen"></a>
 				<section id="two" class="wrapper style2 special">
 					<div class="container">
 						<header class="major">
@@ -72,12 +72,10 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 							<div class="6u 12u$(xsmall)">
 								<div class="image fit captioned">
 									<img src="images/jmkjr-underwater-cover.png" alt="" />
-									<!--<h3>Lorem ipsum dolor sit amet.</h3>-->
 								</div>
 							</div>
 							<div class="6u$ 12u$(xsmall)">
 								<div class="image fit captioned">
-									<!--<img src="images/pic03.jpg" alt="" />-->
 									<h3>Out now</h3>
 									<br />
 									<svg id="Artwork" xmlns="http://www.w3.org/2000/svg" width="43.777mm" height="9.446mm" viewBox="0 0 124.09227 26.77606">
@@ -115,64 +113,11 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 								</div>
 							</div>
 						</div>
-						<!--<ul class="actions">
-							<li><a href="#" class="button special big">Nulla luctus</a></li>
-							<li><a href="#" class="button big">Sed vulputate</a></li>
-						</ul>-->
+					
 					</div>
-				</section>
+				</section> -->
 
-			<!-- Three -->
-				<!--<section id="three" class="wrapper style1">
-					<div class="container">
-						<header class="major special">
-							<h2>Contact</h2>
-							<p>Feugiat sed lorem ipsum magna</p>
-						</header>
-						<div class="feature-grid">
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Lorem ipsum</h4>
-										<p>Lorem ipsum dolor sit</p>
-									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore esse tenetur accusantium porro omnis, unde mollitia totam sit nesciunt consectetur.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic05.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Recusandae nemo</h4>
-										<p>Ratione maiores a, commodi</p>
-									</header>
-									<p>Animi mollitia optio culpa expedita. Dolorem alias minima culpa repellat. Dolores, fuga maiores ut obcaecati blanditiis, at aperiam doloremque.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Laudantium fugit</h4>
-										<p>Possimus ex reprehenderit eaque</p>
-									</header>
-									<p>Maiores iusto inventore fugit architecto est iste expedita commodi sed, quasi feugiat nam neque mollitia vitae omnis, ea natus facere.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Porro aliquam</h4>
-										<p>Quaerat, excepturi eveniet laboriosam</p>
-									</header>
-									<p>Vitae earum unde, autem labore voluptas ex, iste dolorum inventore natus consequatur iure similique obcaecati aut corporis hic in! Porro sed.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>-->
+
 
 			<!-- Four -->
 		<a name="Contact"></a>
