--- a/spatial/index.html
+++ b/spatial/index.html
@@ -142,6 +142,7 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 <p><label>First Name:</label> <input name="Name" type="text" /></p>
 <p><label>Email Address:</label> <input style="cursor: pointer;" name="Email" type="email" /></p>
 <p><label>Message:</label>  <textarea name="Message"></textarea> </p>
+								<p><input type="checkbox" name="Subscribe" id="Subscribe"><label>Subscribe to jmk jr. email updates.</label></p>
 
 <p><input type="submit" value="Send" /></p>
 </form>
