--- a/spatial/index.html
+++ b/spatial/index.html
@@ -70,7 +70,7 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 					<div class="container">
 						<header class="major">
 							<h2>Listen to "Underwater"</h2>
-							<p>Released: February 10, 2023</p>
+							<p>Release: February 10, 2023</p>
 						</header>
 						<div class="row 150%">
 							<div class="6u 12u$(xsmall)">
