--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 		<meta property="og:description" content="Listen to 'Underwater' - Out on February 10, 2023" />
 		<meta property="og:url" content="https://www.jmkjr.com" />
 		<meta property="og:image" content="https://www.jmkjr.com/images/jmkjr-ogimage.jpg" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+		<link rel="manifest" href="/images/favicons/site.webmanifest">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
