--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; jmk jr.</li>
+						<li><a href="privacypolicy.html">Privacy Policy</a></li>
 					</ul>
 				</div>
 			</footer>
