--- a/success.html
+++ b/success.html
@@ -65,6 +65,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; jmk jr.</li>
+						<li><a href="privacypolicy.html">Privacy Policy</a></li>
 					</ul>
 				</div>
 			</footer>
