--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
 		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<meta property="og:title" content="jmk jr." />
+		<meta property="og:title" content="jmk jr. - Home" />
 		<meta property="og:description" content="Listen to 'Underwater' - Out on February 10, 2023" />
 		<meta property="og:url" content="https://www.jmkjr.com" />
 		<meta property="og:image" content="https://www.jmkjr.com/images/jmkjr-ogimage.jpg" />
