--- a/index-shows.html
+++ b/index-shows.html
@@ -11,9 +11,8 @@
 		<title>jmk jr.</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<meta property="og:title" content="jmk jr." />
+		<meta name="description" content="Listen to 'Underwater' - Out on February 10, 2023" />
+		<meta property="og:title" content="jmk jr. - Home" />
 		<meta property="og:description" content="Listen to 'Underwater' - Out on February 10, 2023" />
 		<meta property="og:url" content="https://www.jmkjr.com" />
 		<meta property="og:image" content="https://www.jmkjr.com/images/jmkjr-ogimage.jpg" />
@@ -23,6 +22,8 @@
 		<link rel="manifest" href="/images/favicons/site.webmanifest">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
+		
+		<meta name="robots" content="noindex, nofollow" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
