--- a/index.html
+++ b/index.html
@@ -159,16 +159,18 @@
 						</header>
 						<table width="80%" border="0" cellspacing="0" cellpadding="0">
   <tbody>
-    <!--<tr>
-      <td>3/2/23 - 9pm</td>
+	  <tr>
+      <td>4/8/23 - 7pm</td>
+      <td><a href="https://www.instagram.com/nytemrkt/" target="_blank" alt="Link to Nyte MRKT on Instagram">Nyte Mrkt @ Long Beach Expo Arts Center</a><br />4321 Atlantic Ave, Long Beach, CA 90807
+	    </td>
+      <td>Free</td>
+    </tr>
+    <tr>
+      <td>6/22/23 - 8pm</td>
       <td><a href="https://lowboybar.com/" target="_blank" alt="Link to the Lowboy Website">Lowboy</a></td>
       <td>Free</td>
-    </tr>-->
-    <tr>
-      <td>3/14/23 - 8pm</td>
-      <td><a href="https://www.theyorkonyork.com/" target="_blank" alt="Link to The York Website">Friends Who Write Songs @ The York</a></td>
-      <td>$5 Suggested Donation</td>
     </tr>
+    
 
   </tbody>
 </table>
