--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 							<form action="https://formsubmit.co/ec4b815784cecd550bff01889ffcde1c" method="POST" id="contact-form">
 						<!--Honeypot-->
 								<input type="text" name="_honey" style="display: none">
-						<!-- Disable Captcha -->
-								<input type="hidden" name="_captcha" value="false">
+						<!-- Disable Captcha 
+								<input type="hidden" name="_captcha" value="false">-->
 								
 								<input type="hidden" name="_next" value="https://jmkjr.com/success.html">
 <p><label>First Name:</label> <input name="Name" type="text" /></p>
